--- a/package.json
+++ b/package.json
@@ -9,24 +9,27 @@
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'"
   },
   "dependencies": {
-    "core-js": "^3.6.4",
+    "core-js": "^3.19.0",
     "flexboxgrid": "^6.3.1",
-    "vue": "^2.6.11",
-    "vue-country-flag": "^2.0.1",
-    "vue-i18n": "^8.17.3",
+    "vue": "^2.6.14",
+    "vue-country-flag": "^2.2.0",
+    "vue-i18n": "^8.26.5",
     "vue-meta": "^2.4.0",
     "vue-typed-js": "^0.1.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@vue/babel-preset-app": "^4.5.15",
     "@vue/cli-plugin-babel": "~4.2.0",
-    "@vue/cli-plugin-eslint": "~4.2.0",
+    "@vue/cli-plugin-eslint": "^4.5.15",
     "@vue/cli-service": "~4.2.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
     "vue-cli-plugin-i18n": "~1.0.1",
-    "vue-in-viewport-directive": "^2.0.0",
-    "vue-template-compiler": "^2.6.11"
+    "vue-in-viewport-directive": "^2.0.2",
+    "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
     "root": true,
